--- a/recipes/index.html
+++ b/recipes/index.html
@@ -107,7 +107,7 @@ archive file names extraction. For example, a level of <code>1</code> will trans
 <thead>
 <tr>
 <th align="left">Parameter</th>
-<th align="left">Debian control field</th>
+<th align="left">Description</th>
 <th align="left">Default value</th>
 </tr>
 </thead>
@@ -115,61 +115,67 @@ archive file names extraction. For example, a level of <code>1</code> will trans
 <tbody>
 <tr>
 <td align="left"><code>section</code></td>
-<td align="left"><code>Section</code></td>
+<td align="left">Fills the <code>Section</code> Debian control field</td>
 <td align="left"></td>
 </tr>
 
 <tr>
 <td align="left"><code>priority</code></td>
-<td align="left"><code>Priority</code></td>
-<td align="left">extra</td>
+<td align="left">Fills the <code>Priority</code> Debian control field</td>
+<td align="left"><code>extra</code></td>
+</tr>
+
+<tr>
+<td align="left"><code>version.epoch</code></td>
+<td align="left">Sets the Debian version epoch prefix</td>
+<td align="left"><code>0</code> (no epoch)</td>
 </tr>
 
 <tr>
 <td align="left"><code>depends</code></td>
-<td align="left"><code>Depends</code></td>
+<td align="left">Fills the <code>Depends</code>  Debian control field</td>
 <td align="left"></td>
 </tr>
 
 <tr>
 <td align="left"><code>pre-depends</code></td>
-<td align="left"><code>Pre-Depends</code></td>
+<td align="left">Fills the <code>Pre-Depends</code> Debian control field</td>
 <td align="left"></td>
 </tr>
 
 <tr>
 <td align="left"><code>recommends</code></td>
-<td align="left"><code>Recommends</code></td>
+<td align="left">Fills the <code>Recommends</code> Debian control field</td>
 <td align="left"></td>
 </tr>
 
 <tr>
 <td align="left"><code>suggests</code></td>
-<td align="left"><code>Suggests</code></td>
+<td align="left">Fills the <code>Suggests</code> Debian control field</td>
 <td align="left"></td>
 </tr>
 
 <tr>
 <td align="left"><code>enhances</code></td>
-<td align="left"><code>Enhances</code></td>
+<td align="left">Fills the <code>Enhances</code> Debian control field</td>
 <td align="left"></td>
 </tr>
 
 <tr>
 <td align="left"><code>breaks</code></td>
-<td align="left"><code>Breaks</code></td>
+<td align="left">Fills the <code>Breaks</code> Debian control field</td>
 <td align="left"></td>
 </tr>
 
 <tr>
 <td align="left"><code>conflicts</code></td>
-<td align="left"><code>Conflicts</code></td>
+<td align="left">Fills the <code>Conflicts</code> Debian control field</td>
 <td align="left"></td>
 </tr>
 
 <tr>
 <td align="left"><code>description</code></td>
-<td align="left"><code>Description</code></td>
+<td align="left">Fills the <code>Description</code> Debian control field</td>
 <td align="left"></td>
 </tr>
 </tbody>
@@ -323,7 +329,7 @@ upstream archive.</p>
 
 </main>
 <footer>
-	Last updated on 2018-03-25 11:13:15 &#43;0200 CEST
+	Last updated on 2018-03-28 08:57:58 &#43;0200 CEST
 </footer>
 <script src="/assets/vendor.js"></script>
 <script src="/assets/app.js"></script>
