--- a/usage/index.html
+++ b/usage/index.html
@@ -68,7 +68,7 @@ release version <code>1.2.3</code>.</p>
 
 <p>If the local repository is in an inconsistent state, you can force its reinitialization by executing:</p>
 
-<pre><code>mkdeb update --reset
+<pre><code>mkdeb update --force
 </code></pre>
 
 <div class="note"><span class="fas fa-info-circle"></span> The existing repository local copy will be removed.</div>
@@ -91,7 +91,7 @@ release version <code>1.2.3</code>.</p>
 
 </main>
 <footer>
-	Last updated on 2018-03-25 11:13:51 &#43;0200 CEST
+	Last updated on 2018-05-09 13:09:09 &#43;0200 CEST
 </footer>
 <script src="/assets/vendor.js"></script>
 <script src="/assets/app.js"></script>
